--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "symfony/maker-bundle": "^1.45"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^1.8"
     },
     "license": "MIT",
     "autoload": {
