--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "symfony/maker-bundle": "^1.45",
-        "webmozart/assert": "^1.11"
+        "webmozart/assert": "^1.11",
+        "myclabs/php-enum": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -16,6 +17,11 @@
         "psr-4": {
             "Mamazu\\SuluMaker\\": "src/"
         }
+    },
+    "scripts": {
+        "analyse": [
+            "vendor/bin/phpstan"
+        ]
     },
     "authors": [
         {
