--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,15 @@
     "description": "Package to generate configuration in Sulu",
     "type": "library",
     "require": {
-        "symfony/maker-bundle": "^1.45",
-        "webmozart/assert": "^1.11",
-        "myclabs/php-enum": "^1.8"
+        "php": ">=8.0",
+        "symfony/maker-bundle": "^v1.48.0",
+        "webmozart/assert": "^1.11.0",
+        "myclabs/php-enum": "^1.8.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "phpstan/phpstan": "^1.8",
-        "phpstan/phpstan-webmozart-assert": "^1.2"
+        "phpunit/phpunit": "^9.6.3",
+        "phpstan/phpstan": "^1.9.17",
+        "phpstan/phpstan-webmozart-assert": "^1.2.2",
     },
     "license": "MIT",
     "autoload": {
