--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name": "mamazu/sulu-maker",
-    "description": "Package to generate configuration in Sulu",
+    "name": "friendsofsulu/maker-bundle",
+    "description": "Package to generate configuration and boilerplate code in Sulu",
     "type": "library",
     "require": {
         "php": ">=8.0",
-        "symfony/maker-bundle": "^v1.48.0",
+        "symfony/maker-bundle": "^v1.60.0",
         "webmozart/assert": "^1.11.0",
         "myclabs/php-enum": "^1.8.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6.3",
-        "phpstan/phpstan": "^1.9.17",
-        "phpstan/phpstan-webmozart-assert": "^1.2.2",
+        "phpunit/phpunit": "^9.6.20",
+        "phpstan/phpstan": "^1.11.7",
+        "phpstan/phpstan-webmozart-assert": "^1.2.7"
     },
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Mamazu\\SuluMaker\\": "src/"
+            "FriendsOfSulu\\MakerBundle\\": "src/"
         }
     },
     "scripts": {
