--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,9 @@
     "description": "Package to generate configuration and boilerplate code in Sulu",
     "type": "library",
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.2",
         "symfony/maker-bundle": "^v1.60.0",
-        "webmozart/assert": "^1.11.0",
-        "myclabs/php-enum": "^1.8.4"
+        "webmozart/assert": "^1.11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6.20",
