--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,11 +11,20 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    name: "PHP ${{ matrix.php }}"
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        php: [ '8.2', '8.3' ]
 
     steps:
     - uses: actions/checkout@v3
+    - name: "Set up php"
+      uses: "shivammathur/setup-php@v2"
+      with:
+        php-version: "${{ matrix.php }}"
+        coverage: "none"
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -31,9 +40,6 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run test suite
       run: vendor/bin/phpstan
